--- a/src/views/admin/alliances/delete.pug
+++ b/src/views/admin/alliances/delete.pug
@@ -8,25 +8,26 @@ block breadcrumbItem
     li.breadcrumb-item.active
         span Eliminar de alianza
 block content
-    section.custom-padding-1.bg-white
+    section
         .container
             if data
                 .row
                     .col-sm-12.col-lg-5
-                        img(src=""+ data.imgPath +"", alt="" class="img-fluid")
-                        .py-5
-                            span.d-block.text-muted Nombre
-                            h2.text-primary.display-4.font-weight-bold= data.name
-                            span.d-block.text-muted Descripcion
-                            p.text-primary= data.description
+                        .card
+                            img(src=""+ data.imgPath +"", alt="" class="card-img-top")
+                            .card-body
+                                span.d-block.text-muted Nombre
+                                h2.text-primary.display-4.font-weight-bold= data.name
+                                span.d-block.text-muted Descripcion
+                                p.text-primary= data.description
                     .col-sm-12.col-lg-7
                         h2.text-danger.font-weight-bold.display-4 Deseas eliminar este registro?
                         .py-4
-                        a(href="/admin/alliances/delete/confirm/" + data.id class="btn btn-light py-3 px-4 mr-3")
+                        a(href="/admin/alliances/delete/confirm/" + data.id class="btn bg-red py-3 px-4 mr-3")
                             i.fa.fa-trash.text-danger
                             | &nbsp;
                             span.text-danger Confirmar
-                        a(href="/admin/alliances" class="btn btn-light py-3 px-4")
+                        a(href="/admin/alliances" class="btn bg-blue py-3 px-4")
                             i.fa.fa-arrow-left.text-primary
                             | &nbsp;
                             span.text-primary Cancelar
