--- a/src/views/admin/alliances/update.pug
+++ b/src/views/admin/alliances/update.pug
@@ -10,37 +10,36 @@ block breadcrumbItem
 
 
 block content
-    section.custom-padding-1
+    section
         .container
-            h2.text-primary.font-weight-bold Editar datos de alianza
-            br
-            br
             if data
-                form(action="/admin/alliances/update", method="post" enctype="multipart/form-data")
-                    .form-group
-                        .row
-                            .col-sm-12.col-lg-6
-                                img(src= data.imgPath, alt="" class="d-block img-fluid")
-                                br
-                                br
-                                label(for="" class="font-weight-bold") Imagen de la empresa
-                                    span.text-danger &nbsp; *
-                                .custom-file
-                                    input(type="file" name="file" class="custom-file-input" id="customFile")
-                                    label(for="customFile" class="custom-file-label") Choose file
-                            .col-sm-12.col-lg-6
-                                input(type="hidden" name="id" value= data.id )
-                                label(for="" class="font-weight-bold") Nombre
-                                    span.text-danger &nbsp; *
-                                input(type="text" name="name" value= data.name class="form-control border-0 bg-light py-4")
-                                .form-group
-                                    label(for="" class="font-weight-bold") Descripción
-                                        span.text-danger &nbsp; *
-                                    textarea(name="description", cols="30", rows="10" class="form-control border-0 bg-light")= data.description
-                    .form-group.text-center
-                        button(type="submit" class="btn btn-primary py-3 px-5 mr-3") Guardar
-                        a(href="/admin/alliances" class="btn btn-secondary py-3 px-5") Cancelar
-            else
-                h2.text-primary No hay datos
+                .card
+                    .card-header.bg-white
+                        h2.text-primary.font-weight-bold Editar datos de alianza
+                    .card-body
+                        form(action="/admin/alliances/update", method="post" enctype="multipart/form-data")
+                            .form-group
+                                .row
+                                    .col-sm-12.col-lg-6
+                                        img(src= data.imgPath, alt="" class="d-block img-fluid")
+                                        br
+                                        br
+                                        label(for="" class="font-weight-bold") Imagen de la empresa
+                                            span.text-danger &nbsp; *
+                                        .custom-file
+                                            input(type="file" name="file" class="custom-file-input" id="customFile")
+                                            label(for="customFile" class="custom-file-label") Choose file
+                                    .col-sm-12.col-lg-6
+                                        input(type="hidden" name="id" value= data.id )
+                                        label(for="" class="font-weight-bold") Nombre
+                                            span.text-danger &nbsp; *
+                                        input(type="text" name="name" value= data.name class="form-control border-0 bg-light py-4")
+                                        .form-group
+                                            label(for="" class="font-weight-bold") Descripción
+                                                span.text-danger &nbsp; *
+                                            textarea(name="description", cols="30", rows="10" class="form-control border-0 bg-light")= data.description
+                            .form-group.text-center
+                                button(type="submit" class="btn btn-primary py-3 px-5 mr-3") Guardar
+                                a(href="/admin/alliances" class="btn btn-secondary py-3 px-5") Cancelar
 block scripts
     script(src="/public/js/fileinput.js")
