--- a/src/views/admin/business/delete.pug
+++ b/src/views/admin/business/delete.pug
@@ -8,29 +8,30 @@ block breadcrumbItem
     li.breadcrumb-item.active
         span Detalles de empresa
 block content
-    section.custom-padding-1.bg-white
+    section
         .container
             if data
                 .row
-                    .col-sm-12.col-lg-8
-                        img(src=""+ data.imgPath +"", alt="" class="img-fluid")
-                        .py-5
-                            span.d-block.text-muted Nombre
-                            h2.text-primary.display-4.font-weight-bold= data.name
-                            span.d-block.text-muted Propietario
-                            h4.text-primary= data.own
-                            span.d-block.text-muted Fecha de fundación
-                            h4.text-primary= data.fundation
-                            span.d-block.text-muted Descripcion
-                            p.text-primary= data.description
-                    .col-sm-12.col-lg-4
+                    .col-sm-12.col-lg-5
+                        .card
+                            img(src=""+ data.imgPath +"", alt="" class="card-img-top")
+                            .card-body
+                                span.d-block.text-muted Nombre
+                                h2.text-primary.display-4.font-weight-bold= data.name
+                                span.d-block.text-muted Propietario
+                                h4.text-primary= data.own
+                                span.d-block.text-muted Fecha de fundación
+                                h4.text-primary= data.fundation
+                                span.d-block.text-muted Descripcion
+                                p.text-primary= data.description
+                    .col-sm-12.col-lg-7
                         h2.text-danger.font-weight-bold.display-4 Deseas eliminar este registro?
                         .py-4
-                        a(href="/admin/business/delete/confirm/" + data.id class="btn btn-light py-3 px-4 mr-3")
+                        a(href="/admin/business/delete/confirm/" + data.id class="btn bg-red py-3 px-4 mr-3")
                             i.fa.fa-trash.text-danger
                             | &nbsp;
                             span.text-danger Confirmar
-                        a(href="/admin/business" class="btn btn-light py-3 px-4")
+                        a(href="/admin/business" class="btn bg-blue py-3 px-4")
                             i.fa.fa-arrow-left.text-primary
                             | &nbsp;
                             span.text-primary Cancelar
