--- a/src/views/admin/employees/add.pug
+++ b/src/views/admin/employees/add.pug
@@ -9,42 +9,51 @@ block breadcrumbItem
         span Agregar empleado
 
 block content
-    section.custom-padding-1
+    section
         .container
-            h2.text-primary.font-weight-bold.py-5 Agregar nuevo empleado
-            form(action="/admin/employees/add", method="post" enctype="multipart/form-data")
-                .form-group
-                    .row
-                        .col-sm-12.col-lg-6
-                            label(for="" class="font-weight-bold") Nombre del empleado
+
+            if success_message != null
+                .alert.alert-success.alert-dismissible.fade.show= success_message
+                    button(type="button" class="close" data-dismiss="alert" aria-label="Close")
+                        span(aria-hidden="true") &times;
+
+            .card
+                .card-header.bg-white
+                    h2.text-primary.font-weight-bold Agregar nuevo empleado
+                .card-body
+                    form(action="/admin/employees/add", method="post" enctype="multipart/form-data")
+                        .form-group
+                            .row
+                                .col-sm-12.col-lg-6
+                                    label(for="" class="font-weight-bold") Nombre del empleado
+                                        span.text-danger &nbsp; *
+                                    input(type="text" name="name" class="form-control border-0 bg-light py-4")
+                                .col-sm-12.col-lg-6
+                                    label(for="" class="font-weight-bold") Cargo que ocupa
+                                        span.text-danger &nbsp; *
+                                    input(type="text" name="position" class="form-control border-0 bg-light py-4")
+                        .form-group
+                            .row
+                                .col-sm-12.col-lg-4
+                                    label(for="" class="font-weight-bold") Email
+                                        span.text-danger &nbsp; *
+                                    input(type="email" name="email" class="form-control border-0 bg-light py-4")
+                                .col-sm-12.col-lg-4
+                                    label(for="" class="font-weight-bold") Telefono
+                                        span.text-danger &nbsp; *
+                                    input(type="tel" name="phone" class="form-control border-0 bg-light py-4")
+                                .col-sm-12.col-lg-4
+                                    label(for="" class="font-weight-bold") Fotografía del empleado (800 x 800)
+                                        span.text-danger &nbsp; *
+                                    .custom-file
+                                        input(type="file" name="file" class="custom-file-input" id="customFile")
+                                        label(for="customFile" class="custom-file-label") Choose file
+                        .form-group
+                            label(for="" class="font-weight-bold") Descripción
                                 span.text-danger &nbsp; *
-                            input(type="text" name="name" class="form-control border-0 bg-light py-4")
-                        .col-sm-12.col-lg-6
-                            label(for="" class="font-weight-bold") Cargo que ocupa
-                                span.text-danger &nbsp; *
-                            input(type="text" name="position" class="form-control border-0 bg-light py-4")
-                .form-group
-                    .row
-                        .col-sm-12.col-lg-4
-                            label(for="" class="font-weight-bold") Email
-                                span.text-danger &nbsp; *
-                            input(type="email" name="email" class="form-control border-0 bg-light py-4")
-                        .col-sm-12.col-lg-4
-                            label(for="" class="font-weight-bold") Telefono
-                                span.text-danger &nbsp; *
-                            input(type="tel" name="phone" class="form-control border-0 bg-light py-4")
-                        .col-sm-12.col-lg-4
-                            label(for="" class="font-weight-bold") Fotografía del empleado (800 x 800)
-                                span.text-danger &nbsp; *
-                            .custom-file
-                                input(type="file" name="file" class="custom-file-input" id="customFile")
-                                label(for="customFile" class="custom-file-label") Choose file
-                .form-group
-                    label(for="" class="font-weight-bold") Descripción
-                        span.text-danger &nbsp; *
-                    textarea(name="description", cols="30", rows="10" class="form-control border-0 bg-light")
-                .form-group
-                    button(type="submit" class="btn btn-primary py-3 px-5 mr-3") Guardar
-                    a(href="/admin/employees" class="btn btn-secondary py-3 px-5") Cancelar
+                            textarea(name="description", cols="30", rows="10" class="form-control border-0 bg-light")
+                        .form-group
+                            button(type="submit" class="btn btn-primary py-3 px-5 mr-3") Guardar
+                            a(href="/admin/employees" class="btn btn-secondary py-3 px-5") Cancelar
 block scripts
     script(src="/public/js/fileinput.js")
