--- a/src/views/admin/employees/details.pug
+++ b/src/views/admin/employees/details.pug
@@ -8,30 +8,44 @@ block breadcrumbItem
     li.breadcrumb-item.active
         span Detalles de empleado
 block content
-    section.custom-padding-1.bg-white
+    section
         .container
             if data
-                img(src=""+ data.imgPath +"", alt="" width="300" class="img-fluid")
-                .py-5
-                    span.d-block.text-muted Nombre
-                    h2.text-primary.display-4.font-weight-bold= data.name
-                    span.d-block.text-muted cargo
-                    h4.text-primary= data.position
-                    span.d-block.text-muted Email
-                    h4.text-primary= data.email
-                    span.d-block.text-muted Telefono
-                    h4.text-primary= data.phone
-                    span.d-block.text-muted Descripcion
-                    p.text-primary= data.description
-                    .py-4
-                        a(href="/admin/employees/update/" + data.id class="btn btn-light py-3 px-5 mr-3")
-                            i.fa.fa-pencil.text-primary
-                            | &nbsp;
-                            span.text-primary Editar
-                        a(href="/admin/employees/delete/" + data.id class="btn btn-light py-3 px-5")
-                            i.fa.fa-trash.text-danger
-                            | &nbsp;
-                            span.text-danger Eliminar
+                .card
+                    .card-header.bg-white.d-flex.justify-content-between
+                        h4.text-primary.font-weight-bold Detalles del empleado
+                        .text-right
+                            a(href="/admin/employees/update/" + data.id class="btn bg-blue py-3 px-5 mr-3")
+                                i.fa.fa-pencil.text-primary
+                                | &nbsp;
+                                span.text-primary Editar
+                            a(href="/admin/employees/delete/" + data.id class="btn bg-red py-3 px-5")
+                                i.fa.fa-trash.text-danger
+                                | &nbsp;
+                                span.text-danger Eliminar
+                    .card-body
+                        table.table.table-bordered
+                            tr
+                                td(colspan="2" class="font-weight-bold text-center") Imagen
+                            tr
+                                td(colspan="2")
+                                    img(src= data.imgPath, alt="" class="img-fluid")
+                            tr
+                                td.font-weight-bold Nombre
+                                td= data.name
+                            tr
+                                td.font-weight-bold Cargo
+                                td= data.position
+                            tr
+                                td.font-weight-bold Emial
+                                td= data.email
+                            tr
+                                td.font-weight-bold Telefono
+                                td= data.phone
+                            tr
+                                td(colspan="2" class="font-weight-bold text-center") Descripcion
+                            tr
+                                td(colspan="2")= data.description
             else
                 .text-center
                     h2.text-primary.display-3.font-weight-bold No data available
