--- a/src/views/admin/employees/list.pug
+++ b/src/views/admin/employees/list.pug
@@ -7,34 +7,42 @@ block breadcrumbItem
         span Empleados
 
 block content
-    section.custom-padding-1
+    section
         .container
-            .d-flex.justify-content-between.pb-5
-                h2.text-primary.font-weight-bold Lista de empleados
-                a(href="/admin/employees/add" class="btn btn-primary py-3 px-4") Agregar empleado
-            table.table
-                thead
-                    tr
-                        th Id
-                        th Nombre
-                        th Cargo
-                        th Acciones
-                tbody
-                    if data.length > 0
-                        each val in data
+
+            if success_message != null
+                .alert.alert-success.alert-dismissible.fade.show= success_message
+                    button(type="button" class="close" data-dismiss="alert" aria-label="Close")
+                        span(aria-hidden="true") &times;
+
+            .card
+                .card-header.bg-white.d-flex.justify-content-between
+                    h2.text-primary.font-weight-bold Lista de empleados
+                    a(href="/admin/employees/add" class="btn btn-primary py-3 px-4") Agregar empleado
+                .card-body
+                    table.table
+                        thead
                             tr
-                                td= val.id
-                                td= val.name
-                                td= val.position
-                                td
-                                    div.btn-group
-                                        a(href="/admin/employees/details/" + val.id class="btn btn-light")
-                                            i.fa.fa-info.text-primary
-                                        a(href="/admin/employees/update/" + val.id class="btn btn-light")
-                                            i.fa.fa-pencil.text-primary
-                                        a(href="/admin/employees/delete/" + val.id class="btn btn-light")
-                                            i.fa.fa-trash.text-danger
-                    else
-                        tr
-                            td(colspan="4")
-                                h4.text-center.text-primary.font-weight-bold No hay datos
+                                th Id
+                                th Nombre
+                                th Cargo
+                                th Acciones
+                        tbody
+                            if data.length > 0
+                                each val in data
+                                    tr
+                                        td= val.id
+                                        td= val.name
+                                        td= val.position
+                                        td
+                                            div.btn-group
+                                                a(href="/admin/employees/details/" + val.id class="btn btn-light")
+                                                    i.fa.fa-info.text-primary
+                                                a(href="/admin/employees/update/" + val.id class="btn btn-light")
+                                                    i.fa.fa-pencil.text-primary
+                                                a(href="/admin/employees/delete/" + val.id class="btn btn-light")
+                                                    i.fa.fa-trash.text-danger
+                            else
+                                tr
+                                    td(colspan="4")
+                                        h4.text-center.text-primary.font-weight-bold No hay datos
