--- a/src/views/admin/news/delete.pug
+++ b/src/views/admin/news/delete.pug
@@ -8,7 +8,7 @@ block breadcrumbItem
     li.breadcrumb-item.active
         span Borrar noticia
 block content
-    section.custom-padding-1
+    section
         .container
             .row
                 .col-sm-12.col-lg-7
@@ -25,17 +25,17 @@ block content
                                 i.fas.fa-chevron-left
                             a(href="#carousel-news" class="carousel-control-next" role="button" data-slide="next")
                                 i.fas.fa-chevron-right
-                        .card-body.p-0
+                        .card-body
                             h4.card-title.text-primary.font-weight-bold.display-4= news.title
                             p= news.description
                 .col-sm-12.col-lg-5
                     h2.text-danger.font-weight-bold.display-4 Deseas eliminar este registro?
                         .py-4
-                        a(href="/admin/news/delete/confirm/" + news.id class="btn btn-light py-3 px-4 mr-3")
+                        a(href="/admin/news/delete/confirm/" + news.id class="btn bg-red py-3 px-4 mr-3")
                             i.fa.fa-trash.text-danger
                             | &nbsp;
                             span.text-danger Confirmar
-                        a(href="/admin/news" class="btn btn-light py-3 px-4")
+                        a(href="/admin/news" class="btn bg-blue py-3 px-4")
                             i.fa.fa-arrow-left.text-primary
                             | &nbsp;
                             span.text-primary Cancelar
