--- a/src/views/admin/news/update.pug
+++ b/src/views/admin/news/update.pug
@@ -8,30 +8,33 @@ block breadcrumbItem
     li.breadcrumb-item.active
         span Actualizar noticia
 block content
-    section.custom-padding-1
+    section
         .container
-            h2.text-primary.font-weight-bold Actualizar noticia 
-            form(action="/admin/news/update", method="post" class="py-5" enctype="multipart/form-data")
-                .form-group
-                    .row
-                        .col-sm-12.col-lg-6
-                            input(type="hidden" name="id" value= news.id)
-                            label(for="" class="font-weight-bold") Titulo
+            .card
+                .card-header.bg-white
+                    h2.text-primary.font-weight-bold Actualizar noticia 
+                .card-body
+                    form(action="/admin/news/update", method="post" class="py-5" enctype="multipart/form-data")
+                        .form-group
+                            .row
+                                .col-sm-12.col-lg-6
+                                    input(type="hidden" name="id" value= news.id)
+                                    label(for="" class="font-weight-bold") Titulo
+                                        | &nbsp;
+                                        span.text-danger *
+                                    input(type="text" name="title" value= news.title class="form-control bg-light border-0 py-4")
+                                .col-sm-12.col-lg-6
+                                    label(for="" class="font-weight-bold") Categoria
+                                        | &nbsp;
+                                        span.text-danger *
+                                    input(type="text" name="category" value= news.category class="form-control bg-light border-0 py-4")
+                        .form-group
+                            label(for="" class="font-weight-bold") Descripcion
                                 | &nbsp;
                                 span.text-danger *
-                            input(type="text" name="title" value= news.title class="form-control bg-light border-0 py-4")
-                        .col-sm-12.col-lg-6
-                            label(for="" class="font-weight-bold") Categoria
-                                | &nbsp;
-                                span.text-danger *
-                            input(type="text" name="category" value= news.category class="form-control bg-light border-0 py-4")
-                .form-group
-                    label(for="" class="font-weight-bold") Descripcion
-                        | &nbsp;
-                        span.text-danger *
-                    textarea(name="description", cols="30", rows="5" class="form-control bg-light border-0")= news.description
-                .form-group
-                    button(type="submit" class="btn btn-primary py-3 px-5 mr-3") Guardar
-                    a(href="/admin/news" class="btn btn-secondary py-3 px-5") Cancelar
+                            textarea(name="description", cols="30", rows="5" class="form-control bg-light border-0")= news.description
+                        .form-group
+                            button(type="submit" class="btn btn-primary py-3 px-5 mr-3") Guardar
+                            a(href="/admin/news" class="btn btn-secondary py-3 px-5") Cancelar
 block scripts
     script(src="/public/js/fileinput.js")
