--- a/src/views/admin/services/details.pug
+++ b/src/views/admin/services/details.pug
@@ -8,19 +8,32 @@ block breadcrumbItem
     li.breadcrumb-item.active
         span Detalles de servicio
 block content
-    section.custom-padding-1
+    section
         .container
-            div(class="p-5 "+ data.bgColor +" d-flex align-items-center justify-content-center" style="border-radius: 30px; height: 25px; width: 25px")
-                i(class="fa fa-" + data.icon + " fa-2x " + data.textColor)
-            div
-                h4(class="text-center.text-md-left " + data.textColor)= data.name
-                p.text-muted.text-center.text-md-left= data.description
-            .py-4
-                a(href="/admin/services/update/" + data.id class="btn btn-light py-3 px-5 mr-3")
-                    i.fa.fa-pencil.text-primary
-                    | &nbsp;
-                    span.text-primary Editar
-                a(href="/admin/services/delete/" + data.id class="btn btn-light py-3 px-5")
-                    i.fa.fa-trash.text-danger
-                    | &nbsp;
-                    span.text-danger Eliminar
+            .card
+                .card-header.bg-white.d-flex.justify-content-between
+                    h4.text-primary.font-weight-bold Detalles de servicio
+                    .text-right
+                        a(href="/admin/services/update/" + data.id class="btn bg-blue py-3 px-5 mr-3")
+                            i.fa.fa-pencil.text-primary
+                            | &nbsp;
+                            span.text-primary Editar
+                        a(href="/admin/services/delete/" + data.id class="btn bg-red py-3 px-5")
+                            i.fa.fa-trash.text-danger
+                            | &nbsp;
+                            span.text-danger Eliminar
+                .card-body
+                    table.table.table-bordered
+                        tr
+                            td.font-weight-bold Icono
+                            td
+                                div(class="p-5 "+ data.bgColor +" d-flex align-items-center justify-content-center" style="border-radius: 30px; height: 25px; width: 25px")
+                                    i(class="fa fa-" + data.icon + " fa-2x " + data.textColor)
+                        tr
+                            td.font-weight-bold Nombre
+                            td
+                                h4(class="text-center.text-md-left " + data.textColor)= data.name
+                        tr
+                            td.font-weight-bold Descripcion
+                            td
+                                p.text-muted.text-center.text-md-left= data.description
