--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -35,14 +35,8 @@ block content
                             a(href="/contact" class="btn btn-primary py-3 px-5 mr-3") Enviar
                             button(type="button" class="btn btn-secondary py-3 px-5" data-dismiss="modal") Cerrar
     //- section 1 - quienes somos
-    section.bg-green.custom-padding-1.d-flex.align-items-center
-        .container
-            .row.align-items-center.flex-column-reverse.flex-lg-row
-                .col-sm-12.col-lg-6.text-left
-                    h4.text-white ¿Quiénes somos?
-                    h2.display-3.text-primary.font-weight-bold Acerca de nosotros
-                .col-sm-12.col-lg-6
-                    img(src="/public/img/group.png", alt="" class="img-fluid")
+    section
+        img(src="/public/img/bannerSlogan.jpg", alt="" class="img-fluid")
     //- section 2 - historia
     section.custom-padding-1.bg-white
         .container
