--- a/src/views/admin/shared.pug
+++ b/src/views/admin/shared.pug
@@ -155,7 +155,8 @@
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
         <a href="/admin/home" class="brand-link d-flex align-items-center">
-        <span class="brand-text font-weight-bold">CDMYPE UNIVO</span>
+        img(src="/public/img/LogoCDMYPE_blanco.png", alt="" width="150" class="img-fluid")
+        //- <span class="brand-text font-weight-bold">CDMYPE UNIVO</span>
       </a>
 
       <!-- Sidebar -->
