--- a/src/views/contact.pug
+++ b/src/views/contact.pug
@@ -4,14 +4,8 @@ block links
 
 block content
     //- section 1 - quienes somos
-    section.bg-yellow.custom-padding-1.d-flex.align-items-center
-        .container
-            .row.align-items-center.flex-column-reverse.flex-lg-row
-                .col-sm-12.col-lg-6.text-left
-                    h4.text-white ¿Tiénes dudas?
-                    h2.display-3.text-primary.font-weight-bold Contáctanos
-                .col-sm-12.col-lg-6
-                    img(src="/public/img/contact.png", alt="" class="img-fluid")
+    section
+        img(src="/public/img/bannerContactenos.jpg", alt="" class="img-fluid")
     //- section 2 - formulario de contacto
     section.bg-white.custom-padding-1
         .container
