--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -20,7 +20,7 @@ html(lang="es")
             nav.navbar.navbar-expand-lg.navbar-light.bg-white.py-4.fixed-top
                 div.container
                     a.navbar-brand(href="/")
-                        img(src="/public/img/logo.png", alt="" width="100")
+                        img(src="/public/img/LogoCDMYPE_color.png", alt="" width="100")
                     button(type="button" class="navbar-toggler" data-toggle="collapse" data-target="#nav-content")
                         i.fas.fa-bars
                     div(id="nav-content").collapse.navbar-collapse
