--- a/src/views/services.pug
+++ b/src/views/services.pug
@@ -4,14 +4,8 @@ block links
 
 block content
     //- section 1 - servicios
-    section.bg-orange.custom-padding-1.d-flex.align-items-center
-        .container
-            .row.align-items-center.flex-column-reverse.flex-lg-row
-                .col-sm-12.col-lg-6.text-left
-                    h4.text-white Se más productivo
-                    h2.display-3.text-orange.font-weight-bold Servicios
-                .col-sm-12.col-lg-6
-                    img(src="/public/img/services.png", alt="" class="img-fluid")
+    section
+        img(src="/public/img/bannerServicios.jpg", alt="" class="img-fluid")
     //- section 2 -
     section.bg-white.custom-padding-1
         .container
