--- a/src/views/training.pug
+++ b/src/views/training.pug
@@ -4,14 +4,8 @@ block links
 
 block content
     //- section 1 - asesoría
-    section.bg-red.custom-padding-1.d-flex.align-items-center
-        .container
-            .row.align-items-center.flex-column-reverse.flex-lg-row
-                .col-sm-12.col-lg-6.text-left
-                    h4.text-white Implusamos tu idea
-                    h2.display-3.text-primary.font-weight-bold Asesoría
-                .col-sm-12.col-lg-6
-                    img(src="/public/img/training.png", alt="" class="img-fluid")
+    section
+        img(src="/public/img/bannerConsultoriaProfesional.jpg", alt="" class="img-fluid")
     //- section 2 -
     section.custom-padding-1.bg-white
         .container
