--- a/src/views/business.pug
+++ b/src/views/business.pug
@@ -4,14 +4,8 @@ block links
 
 block content
     //- section 1 - servicios
-    section.bg-green.custom-padding-1.d-flex.align-items-center
-        .container
-            .row.align-items-center.flex-column-reverse.flex-lg-row
-                .col-sm-12.col-lg-6.text-left
-                    h4.text-white Se más productivo
-                    h2.display-3.text-primary.font-weight-bold Empresas
-                .col-sm-12.col-lg-6
-                    img(src="/public/img/img-3.png", alt="" class="img-fluid")
+    section
+        img(src="/public/img/bannerPrestigio.jpg", alt="" class="img-fluid")
     //- section 2 -
     section.custom-padding-1.bg-light
         .container
